chat: prevent message text from overflowing, fixes #56

--- a/src/components/Chat/Message.css
+++ b/src/components/Chat/Message.css
@@ -32,6 +32,7 @@
     display: inline-block;
     margin: 6px 0;
     word-wrap: break-word;
+    overflow: hidden;
   }
 
   /** TODO fix hackiness */
